@@ -1,3 +1,8 @@
+2005-05-12  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el:
+	(increment-number-at-point): allow prefix increment
+
 2005-05-11  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* dotemacs.el:
